syntax = "proto3";
option java_multiple_files = true;

package sdmxdl.format.protobuf.web;

message SdmxWebSource {
  string id = 1;
  map<string, string> names = 2;
  string driver = 3;
  string endpoint = 4;
  map<string, string> properties = 5;
  repeated string aliases = 6;
  optional string website = 7;
  optional string monitor = 8;
  optional string monitor_website = 9;
}
